# UVC-Viewer

./: .gitmodules  Readme.md
Linux/: .gitignore  CMakeLists.txt  Makefile  OSAcknowledgements  Readme.md  SSCO.hpp  UVC.hpp  default.nix  main.cpp  shell.nix
Linux/include/: RingBuffer.hpp  SoundIO.hpp
Linux/src/: main.cpp
Windows/: Readme.md  UVCViewer.sln
Windows/UVCViewer/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  UVCViewer.csproj  UserFacingException.cs
Windows/UVCViewer/Properties/: AssemblyInfo.cs
macOS/: OSAcknowledgements  Readme.md
macOS/UVC Viewer/: AppDelegate.swift  Info.plist  ViewController.swift
macOS/UVC Viewer.xcodeproj/: project.pbxproj
macOS/UVC Viewer/Assets.xcassets/AppIcon.appiconset/: Contents.json
macOS/UVC Viewer/Base.lproj/: Main.storyboard
